--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.26.1",
     "@loadingio/loading.css": "^3.1.0",
+    "axios": "^0.26.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.2",
+    "react-loading-skeleton": "^3.1.0",
     "sass": "^1.49.9"
   },
   "devDependencies": {
