--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "17.0.2",
     "react-loading-skeleton": "^3.1.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sweetalert2": "^11.4.33"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
